gccida/c3/find_stack_direction
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_stack_direction/src/alloca.c:558:6: error: use of undeclared identifier 'find_stack_direction_addr'; did you mean 'find_stack_direction'?
if ( find_stack_direction_addr ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     find_stack_direction
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_stack_direction/src/alloca.c:554:7: note: 'find_stack_direction' declared here
void  find_stack_direction( ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_stack_direction/src/alloca.c:560:16: error: use of undeclared identifier 'find_stack_direction_addr'; did you mean 'find_stack_direction'?
if ( &dummy <= find_stack_direction_addr ) 
               ^~~~~~~~~~~~~~~~~~~~~~~~~
               find_stack_direction
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_stack_direction/src/alloca.c:554:7: note: 'find_stack_direction' declared here
void  find_stack_direction( ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_stack_direction/src/alloca.c:567:1: error: use of undeclared identifier 'find_stack_direction_addr'
find_stack_direction_addr = &dummy; 
^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_stack_direction/src/obj/alloca.o] Error 1
